	correction. Use hex color codes instead of names, because graphviz was
	complaining about them.	Avoid a warning on graphviz about "color" in a
	TD. Replaced lang_label with lang_string(). Show error if map could
	not be generated.

	* operation/reporting/reporting_viewer_pdf.php: Style correction and
	code cleanup.

2008-06-30  Sancho Lerena <slerena@artica.es>

	* agent_manager.php: Agent names are now show in order.

	* functions.php: Added a blank space in Help icon.

	* tactical.php: Added a few links in tactical view.

2008-06-30  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Renamed get_db_all_rows_sqlfree() to
	get_db_all_rows_sql(). Replaced all occurrences of old function name.

	* general/logon_ok.php, godmode/reporting/reporting_builder.php,
	operation/reporting/reporting_viewer.php, reporting/fgraph.php,
	include/functions_reporting.php: Replaced all occurrences
	ofget_db_all_rows_sqlfree() with get_db_all_rows_sql().

	* include/config_process.php: Do not add a slash to attachment_store
	config variable.

	* include/functions.php: Style correction.

	* operation/agentes/estado_agente.php: Reduced one indentation level
	by using comprueba_login() propperly.

	* include/javascript/jquery.cluetip.js: Added to repository. jQuery
	plugin to add cute tips support.

	* images/darrowdown.gif, images/darrowright.gif, images/darrowup.gif,
	images/darrowleft.gif, images/wait.gif, include/styles/cluetip.css:
	Added to repository. Cute tips styling.

	* operation/agentes/networkmap.php: Added support to pretty tips to
	each node of the network map. Use a variable to define the name of
	Pandora FMS node (maybe it would be a nice idea to let the user
	configure it). Added an extra check for file existance when generating
	the graphic. Use pandora functions in some cases. Style correction.

	* operation/agentes/ver_agente.php: Added AJAX support to get the
	current status of an agent to suit in a tooltip.
